--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="main">
 	<div class="left">
 		<br>
-		<div class="profile-img"><img src="image/sweety.png"></div>
+		<div class="profile-img"><img src="koushika.png"></div>
 
 		<div class="box-1">
 			<div class="heading">
